--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "start": "vite --port 3000 --open",
     "build": "tsc && vite build",
+    "test": "jest",
+    "test:watch": "jest --watch --config=jest.config.js",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint --fix . --ext ts,tsx --report-unused-disable-directives",
     "preview": "vite preview"
@@ -14,11 +18,24 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.42",
+    "@swc/jest": "^0.2.24",
+    "@testing-library/cypress": "^8.0.7",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.21",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "cypress": "^10.3.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-transform-stub": "^2.0.0",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^3.5.2",
