--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 	"compilerOptions": {
 		"target": "es5",
 		"lib": ["dom", "dom.iterable", "esnext"],
+		"types": ["cypress"],
 		"allowJs": true,
 		"skipLibCheck": true,
 		"esModuleInterop": true,
@@ -16,5 +17,11 @@
 		"noEmit": true,
 		"jsx": "react-jsx"
 	},
-	"include": ["src", "vite.config.ts"]
+	"include": [
+		"src",
+		"cypress",
+		"jest.config.js",
+		"cypress.config.ts",
+		"vite.config.ts"
+	]
 }
