--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
+    "formik": "^2.4.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@swc/core": "^1.3.72",
