--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
+    "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "formik": "^2.4.2",
     "graphql": "^16.7.1",
+    "jest-environment-jsdom": "^29.6.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,7 +38,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.5.3",
     "@types/lodash": "^4.14.196",
     "@types/node": "^20.4.5",
     "@types/react": "^18.2.17",
@@ -43,23 +45,19 @@
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.14",
+    "axios-mock-adapter": "^1.21.5",
     "cypress": "^12.17.2",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.9.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.28.0",
-    "eslint-plugin-jest": "^27.2.3",
-    "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^5.11.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.2",
-    "jest-environment-jsdom": "^29.6.2",
     "jest-transform-stub": "^2.0.0",
-    "node-fetch": "^3.3.2",
+    "msw": "^1.2.3",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.4",
