--- a/.github/workflows/auto-author-assign.yml
+++ b/.github/workflows/auto-author-assign.yml
@@ -1,4 +1,4 @@
-name: Auto Author Assign
+name: Auto Assign Author 🧑‍💻
 
 on:
   pull_request_target:
@@ -9,6 +9,6 @@ permissions:
 
 jobs:
   assign-author:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: toshimaru/auto-author-assign@v1.6.2
