--- a/.github/workflows/prod-deployment.yml
+++ b/.github/workflows/prod-deployment.yml
@@ -10,7 +10,15 @@ on:
       - main
 
 jobs:
-  Deploy-Production:
+  avoid_reduncy:
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Cancel Previous Redundant Builds
+        uses: styfle/cancel-workflow-action@0.9.1
+        with:
+          access_token: ${{ github.token }}
+
+  deploy-production:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
