--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.14.2",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
+    "firebase": "^10.1.0",
     "formik": "^2.4.2",
     "graphql": "^16.7.1",
     "jest-environment-jsdom": "^29.6.2",
