--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "react-base-skeleton",
   "private": true,
   "version": "0.0.0",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "start": "vite --port 3000 --open",
     "build": "vite build",
@@ -24,12 +27,12 @@
     "axios": "^1.4.0",
     "formik": "^2.4.3",
     "graphql": "^16.7.1",
-    "jest-environment-jsdom": "^29.6.2",
+    "jest-environment-jsdom": "^29.7.0",
     "lodash": "^4.17.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-player": "^2.14.1",
-    "react-router-dom": "^6.15.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-player": "^2.16.1",
+    "react-router-dom": "^6.30.1",
     "yup": "^1.2.0"
   },
   "devDependencies": {
@@ -40,10 +43,10 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/lodash": "^4.14.197",
-    "@types/node": "^20.4.10",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@types/node": "^20.19.11",
+    "@types/react": "^18.3.24",
+    "@types/react-dom": "^18.3.7",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.3.0",
     "@vitejs/plugin-react": "^4.0.4",
     "axios-mock-adapter": "^1.21.5",
